Madarchodo ke liye

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
-<html lang="en" class="bg-base-100">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Social Media Dashboard</title>
+    <title>7 picks an hour</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app" class=""></div>
     <script type="module" src="/src/index.jsx"></script>
   </body>
 </html>
