--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>7 picks an hour</title>
+    <title>7 random pics</title>
     <link rel="icon" href="/assets/favicon.ico" type="image/x-icon">
   </head>
   <body>
